--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>apache-jena-libs</artifactId>
+            <type>pom</type>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
     
 </project>
