--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
                     </descriptorRefs>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>2.0.1</version>
+            </plugin>
         </plugins>
     </build>
 
