added initial paper documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.class
+*.log
 
 # Package Files #
 *.jar
@@ -8,3 +9,9 @@
 # IDEA Files #
 .idea
 *.iml
+
+# Generated Latex Files #
+*.aux
+*.fdb_latexmk
+*.out
+*.pdf
