--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 # The message itself would have information such as
 # benchmark ID, code for CheckPoint or ProcessFinished, time stamp, and any features
 # provided within the message
-log4j.appender.stdout.layout.ConversionPattern=%m%n
+log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 
 # File appender that outputs to a file called logfile.txt
 log4j.appender.generalfile=org.apache.log4j.RollingFileAppender
